# gat-trait

./: Cargo.toml  README.md
gat-trait/: Cargo.toml
gat-trait-test/: Cargo.toml
gat-trait-test/src/: main.rs
gat-trait/src/: args.rs  expand.rs  lib.rs  lifetime.rs
